--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <br><br>
         <button class="btn" onclick="toggleTheme()">Сменить тему</button>
     </section>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
